--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -15,15 +15,11 @@ jobs:
           # do some operation that changes a file in the git repo
           date > time.txt
 
-      #- name: setup git config
-      #  run: |
-      #    # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
-      #    git config user.name "GitHub Actions Bot"
-      #    git config user.email "<>"
-
       - name: commit
         run: |
           # Stage the file, commit and push
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-action@users.noreply.github.com"
           git add .
           git commit -am "auto commit on branch ${GITHUB_REF##*/}"
           git push origin main
