--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -18,8 +18,9 @@ jobs:
       - name: commit
         run: |
           # Stage the file, commit and push
-          git config user.name "GitHub Actions Bot"
-          git config user.email "github-action@users.noreply.github.com"
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -am "auto commit on branch ${GITHUB_REF##*/}"
-          git push origin main
+          git commit 
+          git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${process.env.GITHUB_ACTOR}"
+          git push origin ${GITHUB_REF##*/}
