--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -21,6 +21,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit 
-          git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${process.env.GITHUB_ACTOR}"
+          git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${process.env.GITHUB_ACTOR} <${process.env.GITHUB_ACTOR}@users.noreply.github.com>"
           git push origin ${GITHUB_REF##*/}
