--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -1,6 +1,6 @@
 on: push
 
-name: Commit date to master
+name: Commit date to ${GITHUB_REF##*/}
 
 jobs:
   Testrun:
@@ -13,12 +13,12 @@ jobs:
       - name: save current date
         run: |
           # do some operation that changes a file in the git repo
-          date > time.txt
+          date >> time.txt
 
       - name: commit
         run: |
           # Stage the file, commit and push
-          git config user.name "github-AMR-bot"
+          git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
