--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -16,10 +16,12 @@ jobs:
           date >> time.txt
 
       - name: commit
+        continue-on-error: true
         run: |
           # Stage the file, commit and push
           git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
+          git diff --no-prefix -U1000
           git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
           git push origin ${GITHUB_REF##*/}
