--- a/.github/workflows/testcommit.yaml
+++ b/.github/workflows/testcommit.yaml
@@ -22,6 +22,6 @@ jobs:
           git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git diff --no-prefix -U1000
+          echo git diff -U1000
           git commit -am "auto commit on branch ${GITHUB_REF##*/}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
           git push origin ${GITHUB_REF##*/}
