--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -36,12 +36,12 @@ jobs:
           # get latest tags to create it
           git pull --tags
           currenttagfull=`git describe --tags | sed 's/v//'`
-          if [ "$currenttagfull" = "" ];
+          if [ "$currenttag" = "" ]; then
             currenttagfull="0.0.1"
           fi
-          currenttagdashes=`echo $currenttagfull | grep -o "[-]" | wc -l`
+          currenttagdashes=`echo $currenttag | grep -o "[-]" | wc -l`
           echo "currenttagfull is ${currenttagfull}"
-          echo "currenttagdashes ${currenttagdashes}"
+          echo "currenttagdashes is ${currenttagdashes}"
           if (( "$currenttagdashes" < 1 )); then
             # so version number is like "1.0.0", commit nr is 0
             currentcommit=0
@@ -49,11 +49,11 @@ jobs:
             currentcommit=`git describe --tags | sed 's/.*-\(.*\)-.*/\1/'`
           fi
           # combine tag (e.g. 1.2.3) and commit number (like 5) increased by 9000 to indicate beta version
-          currentversion="$currenttagfull.$((currentcommit + 9000))" # results in e.g. 1.2.3.9005
+          currentversion="$currenttag.$((currentcommit + 9000))" # results in e.g. 1.2.3.9005
           echo "currentversion=${currentversion}" >> $GITHUB_ENV
           # set version number to files DESCRIPTION and NEWS.md
           sed -i -- "s/^Version: .*/Version: ${currentversion}/" DESCRIPTION
-          if [ -e "NEWS.md" ] ; then
+          if [ -e "NEWS.md" ]; then
             sed -i -- "1s/.*/# v${currentversion}/" NEWS.md
           fi
           rm *-- || true
