--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -1,7 +1,9 @@
-# This script does two things automatically:
-# - Update the documentation using roxygen2
-# - Update the version number to the latest tag name and commit index + 9000
-#   (e.g. tag "v1.2.3" and commit #5 in that tag will lead to "1.2.3.9005")
+# This workflow does two things:
+# - Update the R package documentation using roxygen2
+# - Provide automated semantic versioning by analysing the latest tag name and commit index + 9000
+#   - tag "v1.2.3" and commit #5 in that tag will lead to "1.2.3.9005"
+#   - no tag and commit #5 will lead to "0.0.1.9005"
+#   - The files DESCRIPTION and NEWS.md will be updated
 
 # Run on any push
 on:
@@ -31,6 +33,7 @@ jobs:
       - name: Update Documentation
         run: |
           Rscript -e "roxygen2::roxygenise()"
+          
       - name: Update Version Number
         run: |
           # get latest tags to create it
@@ -38,30 +41,35 @@ jobs:
           currenttag=`git describe --tags | sed 's/v//'`
           if [ "$currenttag" = "" ]; then
             # there is no tag, so set tag to 0.0.1 and commit index to current count
+            echo "Message: no git tags found, setting version to 0.0.1.*"
             currenttag="0.0.1"
             currentcommit=`git rev-list --count ${GITHUB_REF##*/}`
           else
             # there is a tag, so base version number on that
+            echo "Message: tag ${currenttag} found"
             commitcount=`echo $currenttag | grep -o "[-]" | wc -l`
             if (( "$commitcount" < 1 )); then
               # tag is new, so commit index must be 0
+              echo "Message: no previous commits found in tag ${currenttag}"
               currentcommit=0
             else
               # determine commit count within tag
               currentcommit=`git describe --tags | sed 's/.*-\(.*\)-.*/\1/'`
+              echo "Message: ${currentcommit} previous commits found in tag ${currenttag}"
             fi
           fi
-          echo "currenttag is ${currenttag}"
-          echo "currentcommit is ${currentcommit}"
           # combine tag (e.g. 1.2.3) and commit number (like 5) increased by 9000 to indicate beta version
           currentversion="$currenttag.$((currentcommit + 9000))" # results in e.g. 1.2.3.9005
+          echo "Message: current version will be v${currentversion}"
           echo "currentversion=${currentversion}" >> $GITHUB_ENV
           # set version number to files DESCRIPTION and NEWS.md
           sed -i -- "s/^Version: .*/Version: ${currentversion}/" DESCRIPTION
           if [ -e "NEWS.md" ]; then
             sed -i -- "1s/.*/# v${currentversion}/" NEWS.md
+          else
+            echo "Message: no NEWS.md found"
           fi
-          rm *-- || true
+          # rm *-- || true # required for macOS
       
       # Send updates to repo using GH Actions bot
       - name: Commit to Current Branch
@@ -69,5 +77,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -am "Update version to v${{ env.currentversion }}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
+          git commit -am "Auto-update versioning to v${{ env.currentversion }}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
           git push origin ${GITHUB_REF##*/}
