--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -43,7 +43,7 @@ jobs:
             # there is no tag, so set tag to 0.0.1 and commit index to current count
             echo "Message: no git tags found, setting version to 0.0.1.*"
             currenttag="0.0.1"
-            echo ${git shortlog}
+            git shortlog
             git pull --force
             # currentcommit=`git rev-list --count ${GITHUB_REF##*/}`
             git shortlog | grep -E '^[ ]+\w+'
