--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -19,6 +19,11 @@ jobs:
     steps:
       # Set up R (current stable version) and developer tools
       - uses: actions/checkout@v3
+        with:
+          ref: ${GITHUB_REF##*/} 
+          # ${{ env.BRANCH }}
+          fetch-depth: 0
+        
       # - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
         with:
