--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -33,12 +33,16 @@ jobs:
           use-public-rspm: true
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::roxygen2
+          extra-packages: |
+            any::pkgload
+            any::roxygen2
           
       # Run the updates
       - name: Update R Documentation
         run: |
           Rscript -e "roxygen2::roxygenise()"
+          # save package name to environment:
+          echo "currentpkg=${Rscript -e 'pkgload::pkg_name()'}" >> $GITHUB_ENV
           
       - name: Update Version Number
         run: |
@@ -73,7 +77,7 @@ jobs:
           sed -i -- "s/^Version: .*/Version: ${currentversion}/" DESCRIPTION
           echo "Message: updated DESCRIPTION"
           if [ -e "NEWS.md" ]; then
-            sed -i -- "1s/.*/# v${currentversion}/" NEWS.md
+            sed -i -- "1s/.*/# ${currentpkg} v${currentversion}/" NEWS.md
             echo "Message: updated NEWS.md"
           else
             echo "Message: no NEWS.md found!"
@@ -87,7 +91,7 @@ jobs:
             git config user.name "github-actions"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add .
-            git commit -am "Auto-update versioning to v${{ env.currentversion }}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
+            git commit -am "Auto-versioning to v${{ env.currentversion }}" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
             git push origin ${GITHUB_REF##*/}
           else 
             echo "No git changes, nothing to commit"
