--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -42,7 +42,8 @@ jobs:
         run: |
           Rscript -e "roxygen2::roxygenise()"
           # save package name to environment:
-          echo "currentpkg=${Rscript -e 'pkgload::pkg_name()'}" >> $GITHUB_ENV
+          currentpkg=`Rscript -e "pkgload::pkg_name()"`
+          echo "currentpkg=${currentpkg}" >> $GITHUB_ENV
           
       - name: Update Version Number
         run: |
