--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           Rscript -e "roxygen2::roxygenise()"
           # save package name to environment:
-          currentpkg=`Rscript -e "as.symbol(pkgload::pkg_name())"`
+          currentpkg=`Rscript -e "message(pkgload::pkg_name())"`
           echo "currentpkg=${currentpkg}" >> $GITHUB_ENV
           
       - name: Update Version Number
