--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -18,25 +18,27 @@ jobs:
     continue-on-error: true
     steps:
       # Set up R (current stable version) and developer tools
-      - name: Set up R and dependencies
-        - uses: actions/checkout@v3
-          with:
+      - name: Retrieve git repository
+        uses: actions/checkout@v3
+        with:
             # important to get the whole history using this
             # (see issue https://github.com/actions/checkout/issues/520)
             ref: ${{ env.BRANCH }}
             fetch-depth: 0
         # - uses: r-lib/actions/setup-pandoc@v2
-        - uses: r-lib/actions/setup-r@v2
-          with:
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
             r-version: "release"
             # use RStudio Package Manager (RSPM) to quickly install packages
             use-public-rspm: true
-        - uses: r-lib/actions/setup-r-dependencies@v2
-          with:
-            extra-packages: |
-              any::pkgload
-              any::roxygen2
-          
+      - name: Set up R dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::pkgload
+            any::roxygen2
+
       # Run the updates
       - name: Update R documentation
         run: |
