--- a/.github/workflows/update-docs-and-version.yaml
+++ b/.github/workflows/update-docs-and-version.yaml
@@ -107,8 +107,8 @@ jobs:
             git config user.name "github-actions"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add .
-            git commit --amend --no-edit --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
-            git push --force origin ${GITHUB_REF##*/}
+            # git commit --amend --no-edit --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
+            # git push --force origin ${GITHUB_REF##*/}
           else 
             echo "No git changes, nothing to commit"
           fi
